# read-rapidpe

./: .gitignore  README.md  pyproject.toml
read_rapidpe/: __init__.py  grid_point.py  io.py  metadata_parser.py  p_astro.py  parser.py  plot.py  result.py  transform.py
read_rapidpe/plugins/: em_bright.py
