[tool.poetry]
name = "read-rapidpe"
version = "0.1.1"
description = ""
authors = ["Cory Chu <cory@gwlab.page>"]
readme = "README.md"
packages = [{include = "read_rapidpe"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
python-ligo-lw = "^1.8.3"
joblib = "^1.2.0"
lalsuite = "^7.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
